--- a/pom.xml
+++ b/pom.xml
@@ -13,5 +13,21 @@
         <maven.compiler.target>18</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+    <dependencies>
+        <!-- https://mvnrepository.com/artifact/org.codehaus.httpcache4j.uribuilder/uribuilder -->
+        <dependency>
+            <groupId>org.codehaus.httpcache4j.uribuilder</groupId>
+            <artifactId>uribuilder</artifactId>
+            <version>2.0.0</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.apache.httpcomponents/httpclient -->
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.5.13</version>
+        </dependency>
+
+
+    </dependencies>
 
 </project>
